# assert-plugin

./: README.md  assert-plugin.cabal  stack.yaml
src/Test/: Assert.hs
src/With/: Assertions.hs
test/: Spec.hs
