cabal-version: 1.12

name:           assert-plugin
version:        0.1.0
description:    Rich switchable assertions
homepage:       https://github.com/aspiwack/assert-plugin#readme
bug-reports:    https://github.com/aspiwack/assert-plugin/issues
author:         Arnaud Spiwack
maintainer:     arnaud@spiwack.net
copyright:      2019 Arnaud Spiwack
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/aspiwack/assert-plugin

library
  exposed-modules:
      Test.Assert
      With.Assertions
  hs-source-dirs:
      src
  build-depends:
                base >=4.7 && <5
              , ghc
              , syb
              , uniplate
              , validity
  default-language: Haskell2010

test-suite assert-plugin-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      assert-plugin
    , base >=4.7 && <5
    , hspec
    , validity
  default-language: Haskell2010
